cambio de informacion en pestaña acerca de

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						<header class="col-12"> 
 							<div class="section-heading heading-center">
 								<div class="section-subheading"  >¿QUE OFRECEMOS?</div>
-								<h2>Nuestros Servicios</h2>
+								<h2> Servicios</h2>
 							</div>
 						</header>
 						<div class="col-lg-3 col-md-6 col-12 item">
