--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li>
                 <a href="services.html">Servicios</a>
             </li>
-            <li>
+           <!--- <li>
                 <a href="typography.html">Typography</a>
             </li>
             <li>
@@ -58,7 +58,7 @@
             </li>
             <li>
                 <a href="news.html">Blog</a>
-            </li>
+            </li>-->
             <li>
                 <a href="contacts.html">Contacto</a>
             </li>
@@ -106,21 +106,15 @@
                 <span>Servicios</span>
             </a>
         </li>
-        <li>
-            <a href="typography.html" data-title="Typography">
-                <span>Typography</span>
-            </a>
-        </li>
-        <li>
-            <a href="tabs-and-accordions.html" data-title="Tabs & Accordions">
-                <span>Tabs & Accordions</span>
-            </a>
-        </li>
-        <li>
-            <a href="news.html" data-title="Blog">
-                <span>Blog</span>
-            </a>
-        </li>
+       <!--- <li>
+                <a href="typography.html">Typography</a>
+            </li>
+            <li>
+                <a href="tabs-and-accordions.html">Tabs & Accordions</a>
+            </li>
+            <li>
+                <a href="news.html">Blog</a>
+            </li>-->
         <li>
             <a href="contacts.html" data-title="Contacto">
                 <span>Contacto</span>
@@ -572,7 +566,7 @@
     <div class="footer-main">
         <div class="container">
             <div class="row items align-items-center">
-                <div class="col-lg-3 col-md-4 col-12 item">
+                <!--<div class="col-lg-3 col-md-4 col-12 item">
                     <div class="widget-brand-info">
                         <div class="widget-brand-info-main">
                             <a href="index.html" class="logo" title="PathSoft">
@@ -580,20 +574,32 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="col-md item">
-                    <div class="footer-item">
-                        <nav class="footer-nav">
-                           <!-- <ul class="footer-mnu footer-mnu-line">
-                                <li><a href="#!" class="hover-link" data-title="Home"><span>Inicio</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="About us"><span>Acerca de</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="Services"><span>Servicios</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="News"><span>Blog</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="Contacts"><span>Contacto</span></a></li>
-                            </ul>-->
-                        </nav>
-                    </div>
-                </div>
+                   <div class="footer-item text-center">
+    <h5 class="footer-title">Servicios de Diseño Web en Mérida, Yucatán</h5>
+    <!-- Logo centrado al final -->
+    <div class="footer-logo mt-4">
+        <a href="index.html" title="Inicio - Diseño Web Mérida">
+            <img src="assets/img/logo.svg" alt="Logo Diseño Web Mérida Yucatán" width="150" height="50" style="margin: 0 auto;">
+        </a>
+    </div>
+    <ul class="footer-mnu footer-mnu-line justify-content-center">
+        <li><a href="#" class="hover-link" data-title="Diseño Web Mérida Yucatán"><span>Diseño web en Mérida, Yucatán</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Páginas Web Económicas"><span>Páginas web económicas</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Diseño Web Profesional Mérida"><span>Diseño web profesional en Mérida</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Landing Pages Mérida"><span>Landing pages para negocios</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Tienda en Línea Mérida"><span>Páginas web para vender en línea</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Webs para negocios Mérida"><span>Webs para negocios locales</span></a></li>
+    </ul>
+	<br>
+  <p class="footer-desc mt-6">
+    Páginas web económicas y profesionales en Mérida, Yucatán. Ya sea que necesites una página para tu negocio, una tienda en línea o una landing page efectiva, tenemos la solución ideal para ti.
+</p>
+
+    
+</div>
+
             </div>
         </div>
     </div>
