--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
             <li>
                 <a href="services.html">Servicios</a>
             </li>
-            <li>
+            <!--- <li>
                 <a href="typography.html">Typography</a>
             </li>
             <li>
@@ -56,8 +56,7 @@
             </li>
             <li>
                 <a href="news.html">Blog</a>
-            </li>
-            <li>
+            </li>-->
                 <a href="contacts.html">Contacto</a>
             </li>
         </ul>
@@ -96,21 +95,15 @@
                 <span>Servicios</span>
             </a>
         </li>
-        <li>
-            <a href="typography.html" data-title="Typography">
-                <span>Typography</span>
-            </a>
-        </li>
-        <li>
-            <a href="tabs-and-accordions.html" data-title="Tabs & Accordions">
-                <span>Tabs & Accordions</span>
-            </a>
-        </li>
-        <li>
-            <a href="news.html" data-title="Blog">
-                <span>Blog</span>
-            </a>
-        </li>
+        <!--- <li>
+                <a href="typography.html">Typography</a>
+            </li>
+            <li>
+                <a href="tabs-and-accordions.html">Tabs & Accordions</a>
+            </li>
+            <li>
+                <a href="news.html">Blog</a>
+            </li>-->
         <li>
             <a href="contacts.html" data-title="Contacto">
                 <span>Contacto</span>
@@ -239,6 +232,24 @@
 					</div>
 				</div>
 			</div>
+            <div class="section">
+   <div class="moving-section" style="width: 100vw; overflow: hidden; background-color: #007BFF; padding: 10px 0;">
+    <div class="moving-text" style="display: inline-block; white-space: nowrap; color: #fff; font-size: 1.2rem; animation: moveText 20s linear infinite; padding-left: 100%;">
+         🚀 Diseño web | 🛒 E-commerce | 📧 Correo Profesional | 📱 E-mail Marketing | 📈 Marketing Online | 🛠️ Soporte Técnico |✅​ *El plan seleccionado incluye los servicios detallados. Si deseás agregar funcionalidades adicionales, se aplicarán costos extra según el alcance de las modificaciones.</p>
+    </div>
+</div>
+
+<style>
+@keyframes moveText {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+</style>
+
             <div class="section">
 			<section class="section">
 				<div class="container">
@@ -380,32 +391,45 @@
 </div>
 
 <!-- Begin footer -->
+<!-- Begin footer -->
 <footer class="footer footer-minimal">
     <div class="footer-main">
         <div class="container">
             <div class="row items align-items-center">
-                <div class="col-lg-3 col-md-4 col-12 item">
+                <!--<div class="col-lg-3 col-md-4 col-12 item">
                     <div class="widget-brand-info">
                         <div class="widget-brand-info-main">
                             <a href="index.html" class="logo" title="PathSoft">
-                                <img data-src="assets/img/logo-white.svg" class="lazy" width="133" height="36" src="assets/img/logo-white.svg" alt="PathSoft" data-loaded="true" style="opacity: 1;">
+                                <img data-src="assets/img/logo.svg" class="lazy" width="133" height="36" src="assets/img/logo.svg" alt="PathSoft" data-loaded="true" style="opacity: 1;">
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="col-md item">
-                    <div class="footer-item">
-                        <nav class="footer-nav">
-                            <ul class="footer-mnu footer-mnu-line">
-                                <li><a href="#!" class="hover-link" data-title="Home"><span>Inicio</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="About us"><span>Acerca de</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="Services"><span>Servicios</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="News"><span>Blog</span></a></li>
-                                <li><a href="#!" class="hover-link" data-title="Contacts"><span>Contacto</span></a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
+                   <div class="footer-item text-center">
+    <h5 class="footer-title">Servicios de Diseño Web en Mérida, Yucatán</h5>
+    <!-- Logo centrado al final -->
+    <div class="footer-logo mt-4">
+        <a href="index.html" title="Inicio - Diseño Web Mérida">
+            <img src="assets/img/logo.svg" alt="Logo Diseño Web Mérida Yucatán" width="150" height="50" style="margin: 0 auto;">
+        </a>
+    </div>
+    <ul class="footer-mnu footer-mnu-line justify-content-center">
+        <li><a href="#" class="hover-link" data-title="Diseño Web Mérida Yucatán"><span>Diseño web en Mérida, Yucatán</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Páginas Web Económicas"><span>Páginas web económicas</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Diseño Web Profesional Mérida"><span>Diseño web profesional en Mérida</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Landing Pages Mérida"><span>Landing pages para negocios</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Tienda en Línea Mérida"><span>Páginas web para vender en línea</span></a></li>
+        <li><a href="#" class="hover-link" data-title="Webs para negocios Mérida"><span>Webs para negocios locales</span></a></li>
+    </ul>
+	<br>
+  <p class="footer-desc mt-6">
+    Páginas web económicas y profesionales en Mérida, Yucatán. Ya sea que necesites una página para tu negocio, una tienda en línea o una landing page efectiva, tenemos la solución ideal para ti.
+</p>
+
+    
+</div>
+
             </div>
         </div>
     </div>
@@ -421,7 +445,7 @@
                     </nav>
                 </div>
                 <div class="col-md-auto col-12 item">
-                    <div class="copyright">© 2022 psFree. All rights reserved.</div>
+                    <div class="copyright">© 2024 C.A.C.C. All rights reserved.</div>
                 </div>
             </div>
         </div>
