--- a/index.html
+++ b/index.html
@@ -41,27 +41,10 @@
 <nav class="mmm">
     <div class="mmm-content">
         <ul class="mmm-list">
-            <li>
-                <a href="index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="about-us.html">Acerca de</a>
-            </li>
-            <li>
-                <a href="services.html">Servicios</a>
-            </li>
-           <!--- <li>
-                <a href="typography.html">Typography</a>
-            </li>
-            <li>
-                <a href="tabs-and-accordions.html">Tabs & Accordions</a>
-            </li>
-            <li>
-                <a href="news.html">Blog</a>
-            </li>-->
-            <li>
-                <a href="contacts.html">Contacto</a>
-            </li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about-us.html">Acerca de</a></li>
+            <li><a href="services.html">Servicios</a></li>
+            <li><a href="contacts.html">Contacto</a></li>
         </ul>
     </div>
 </nav><!-- End mobile main menu -->
@@ -71,11 +54,11 @@
             <div class="col">
                 <div class="bff-container">
                    
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 <header class="header header-minimal">
     <nav class="header-fixed">
         <div class="container">
@@ -92,7 +75,7 @@
 <nav class="main-mnu">
     <ul class="main-mnu-list">
         <li>
-            <a href="index.html" data-title="Inicio">
+            <a href="index.html" data-title="Inicio"   class="active">
                 <span>Inicio</span>
             </a>
         </li>
@@ -247,9 +230,9 @@
 						</div>
 						<div class="section-footer col-12 section-footer-animate">
 							<div class="btn-group align-items-center justify-content-center">
-								<a href="#!" class="btn btn-with-icon btn-w240 ripple">
+								<a href="#!" class="about-button">
 									<span>Ver precios</span>
-									<svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
+									
 								</a>
 							</div>
 						</div>
@@ -581,7 +564,7 @@
     <!-- Logo centrado al final -->
     <div class="footer-logo mt-4">
         <a href="index.html" title="Inicio - Diseño Web Mérida">
-            <img src="assets/img/logo.svg" alt="Logo Diseño Web Mérida Yucatán" width="150" height="50" style="margin: 0 auto;">
+           <img src="assets/img/white.png" alt="Logo Diseño Web Mérida Yucatán" width="200" height="150" style="margin-bottom: auto;">
         </a>
     </div>
     <ul class="footer-mnu footer-mnu-line justify-content-center">
@@ -633,3 +616,11 @@
 <script src="assets/js/forms.js"></script>
 	
 </body></html>
+
+<style>.bff {
+    display: block;
+    padding: 0rem 0;
+    background: linear-gradient(to right, var(--el-gradient-start) 0%, var(--el-gradient-end) 100%);
+    color: var(--background-color);
+    text-decoration: none;
+}</style>
