--- a/contacts.html
+++ b/contacts.html
@@ -163,31 +163,32 @@
 							<div class="contact-info section-bgc">
 								<h3>Siempre en contacto</h3>
 								<ul class="contact-list">
-									<li>
+									<!--<li>
 										<i class="material-icons material-icons-outlined md-22">location_on</i>
 										<div class="footer-contact-info">
 											<a href="https://goo.gl/maps/2Ygp5S2Ssm1G5o329">
 												4730 Crystal Springs Dr, Los Angeles, CA
 											</a>
 										</div>
-									</li>
+									</li>-->
 									<li>
-										<i class="material-icons material-icons-outlined md-22">smartphone</i>
+										<i class="material-icons material-icons-outlined md-22">chat</i>
 										<div class="footer-contact-info">
-											<a href="tel:+13239134688" class="formingHrefTel">+52 999-175-25-40</a>
+											 <a href="https://wa.me/529991752540" target="_blank" class="whatsapp-link">
+                                        +52 999-175-25-40</a>
 											<!--<a href="tel:+13238884554" class="formingHrefTel">+52 323-888-4554</a>-->
 										</div>
 									</li>
 									<li>
 										<i class="material-icons material-icons-outlined md-22">email</i>
 										<div class="footer-contact-info">
-											<a href="mailto:mail@example.com">servicio@web-pixel-perfect.com</a>
+											<a href="mailto:mail@example.com">contacto@pixelperfect.com.mx</a>
 											<!--<a href="mailto:info@example.com">info@example.com</a>-->
 										</div>
 									</li>
 									<li>
 										<i class="material-icons material-icons-outlined md-22">schedule</i>
-										<div class="footer-contact-info"><p>Lunes - Viernes: 9:00 - 18:00</p></div>
+										<div class="footer-contact-info"><p>Lunes - Viernes: 9:00 hrs - 19:00 hrs</p></div>
 									</li>
 								</ul>
 							</div>
@@ -283,7 +284,7 @@
     <!-- Logo centrado al final -->
     <div class="footer-logo mt-4">
         <a href="index.html" title="Inicio - Diseño Web Mérida">
-            <img src="assets/img/logo.svg" alt="Logo Diseño Web Mérida Yucatán" width="150" height="50" style="margin: 0 auto;">
+            <img src="assets/img/white.png" alt="Logo Diseño Web Mérida Yucatán" width="200" height="150" style="margin-bottom: auto;">
         </a>
     </div>
     <ul class="footer-mnu footer-mnu-line justify-content-center">
