--- a/about-us.html
+++ b/about-us.html
@@ -144,10 +144,11 @@
         <p>
           Trabajo de forma independiente, ofreciendo un trato directo y personalizado. Cada proyecto lo tomo como propio, cuidando cada detalle.
         </p>
-        <a href="#contacto" class="about-button">
+    <a href="https://wa.me/519991752540?text=Hola%2C%20estoy%20interesado%2Fa%20y%20me%20gustaría%20recibir%20más%20información." target="_blank" class="about-button">
   <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" class="icon">
   WhatsApp
 </a>
+
 
       </div>
       <div class="about-image">
