--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
  
-    <title>PixelPerfect - Diseño De Pagínas Web</title>
+   <title>PixelPerfect - Diseño De Pagínas Web en Mérida Yucatán</title>
 
     <meta name="description" content="Description">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -138,8 +138,8 @@
       <div class="about-text">
         <h2>Acerca de</h2>
         <p>
-          Soy el creador detrás de <strong>PixelPerfect</strong>, un freelancer dedicado al diseño web.
-          Ayudo a pequeñas y medianas empresas a destacarse online con sitios modernos y funcionales.
+          Hola!, Me llamo Carlos soy el creador detrás de <strong>PixelPerfect</strong>, un freelancer dedicado al diseño web.
+          Quiero ayudar a pequeñas y medianas empresas a destacarse online con sitios modernos y funcionales.
         </p>
         <p>
           Trabajo de forma independiente, ofreciendo un trato directo y personalizado. Cada proyecto lo tomo como propio, cuidando cada detalle.
@@ -378,7 +378,7 @@
                     <nav class="footer-links">
                         <ul>
                             <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                           
                         </ul>
                     </nav>
                 </div>
