--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
    
-    <title>PixelPerfect - Diseño De Pagínas Web</title>
+      <title>PixelPerfect - Diseño De Pagínas Web en Mérida Yucatán</title>
 
     <meta name="description" content="Description">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -237,9 +237,9 @@
 			</div>
 
 			<!-- Begin map -->
-			<div class="map">
+		<!--	<div class="map">
 				<iframe class="lazy" data-src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d904.8710642969835!2d-89.61290002265562!3d20.97085750078445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjDCsDU4JzE1LjIiTiA4OcKwMzYnNDUuNiJX!5e0!3m2!1ses!2smx!4v1718132405390!5m2!1ses!2smx"></iframe>
-			</div><!-- End map -->
+			</div>End map -->
 
 		</div>
 
@@ -309,22 +309,22 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <div class="container">
-            <div class="row justify-content-between items">
-                <div class="col-md-auto col-12 item">
-                    <nav class="footer-links">
-                        <ul>
-                            <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-md-auto col-12 item">
-                    <div class="copyright">© 2024 C.A.C.C. All rights reserved.</div>
-                </div>
-            </div>
-        </div>
-    </div>
+							<div class="container">
+								<div class="row justify-content-between items">
+									<div class="col-md-auto col-12 item">
+										<nav class="footer-links">
+											<ul>
+												<li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+												<!--<li><a href="privacy-policy.html">Privacy Policy</a></li>-->
+											</ul>
+										</nav>
+									</div>
+									<div class="col-md-auto col-12 item">
+										<div class="copyright">© 2024 C.A.C.C. All rights reserved.</div>
+									</div>
+								</div>
+							</div>
+						</div>
 </footer><!-- End footer -->
 
 	</main><!-- End main -->
