--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 
 
-	<title>PixelPerfect - Diseño De Pagínas Web</title>
+	   <title>PixelPerfect - Diseño De Pagínas Web en Mérida Yucatán</title>
 
 	<meta name="description" content="Description">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -290,7 +290,7 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">$</span> <span class="value">4,600</span> <span class="duration">/MXN</span></li>
+																			<li><span class="currency">Desde $</span> <span class="value">4,599</span> <span class="duration">/MXN</span></li>
 																			<li class="price-text">Perfecto para páginas web simples o blogs.</li>
 																		</a>
 																	</div>
@@ -314,7 +314,7 @@
 
 																		<div style="display: flex; justify-content: center; align-items: center; padding: 10px; height: 100%;">
 																			<a href="https://wa.me/529991752540?text=Hola,%20quiero%20información%20sobre%20el%20Plan%20Basico." target="_blank" class="about-button">
-                                                                        Seleccionar
+                                                                        Cotizar
                                                                         </a></div>
 																	</div>
 																</ul>
@@ -332,7 +332,7 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">$</span> <span class="value">6,200</span> <span class="duration">/MXN</span></li>
+																			<li><span class="currency">Desde $</span> <span class="value">6,199</span> <span class="duration">/MXN</span></li>
 																			<li class="price-text">Para más contenido y copias de seguridad diarias para páginas web en expansión.</li>
 																		</a>
 																	</div>
@@ -357,7 +357,7 @@
 
 																		<div style="display: flex; justify-content: center; align-items: center; padding: 10px; height: 100%;">
 																			<a href="https://wa.me/529991752540?text=Hola,%20quiero%20información%20sobre%20el%20Plan%20Estandar." target="_blank" class="about-button">
-                                                                        Seleccionar
+                                                                        Cotizar
                                                                         </a></div>
 																	</div>
 																</ul>
@@ -372,7 +372,7 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">$</span> <span class="value">7,700</span> <span class="duration">/MXN</span></li>
+																			<li><span class="currency">Desde $</span> <span class="value">7,699</span> <span class="duration">/MXN</span></li>
 																			<li class="price-text">Máximo rendimiento y funciones avanzadas de creación de contenidos.</li>
 																		</a>
 																	</div>
@@ -395,7 +395,7 @@
 
 																		<div style="display: flex; justify-content: center; align-items: center; padding: 10px; height: 100%;">
 																			<a href="https://wa.me/529991752540?text=Hola,%20quiero%20información%20sobre%20el%20Plan%20Ultimate." target="_blank" class="about-button">
-                                                                        Seleccionar
+                                                                        Cotizar
                                                                         </a></div>
 																	</div>
 																</ul>
@@ -432,7 +432,7 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">$</span> <span class="value">9,300</span> <span class="duration">/MXN</span></li>
+																			<li><span class="currency">Desde $</span> <span class="value">9,299</span> <span class="duration">/MXN</span></li>
 																			<li class="price-text">Desarrolla tu negocio de venta online con todas las extensiones que necesites.</li>
 																		</a>
 																	</div>
@@ -457,7 +457,7 @@
 
 																		<div style="display: flex; justify-content: center; align-items: center; padding: 10px; height: 100%;">
 																			<a href="https://wa.me/529991752540?text=Hola,%20quiero%20información%20sobre%20el%20Plan%20E-Commerce%20." target="_blank" class="about-button">
-                                                                        Seleccionar
+                                                                        Cotizar
                                                                         </a></div>
 																	</div>
 																</ul>
@@ -499,8 +499,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">$</span> <span class="value">3,000</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text">Suitable for sites that does not receive much traffic.</li>
+																			<li><span class="currency">Desde $</span> <span class="value">2,999</span> <span class="duration">/MXN</span></li>
+																			<li class="price-text"></li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -517,7 +517,7 @@
 																		<li><i class="fas fa-check colorIcon"></i> <strong>Wireframes</strong> previos para aprobación del diseño</li>
 																		<div style="display: flex; justify-content: center; align-items: center; padding: 10px; height: 100%;">
 																			<a href="https://wa.me/529991752540?text=Hola,%20quiero%20información%20sobre%20el%20plan%20Diseño%20de%20Landing%20Page." target="_blank" class="about-button">
-                                                                        Seleccionar
+                                                                        Cotizar
                                                                         </a></div>
 																	</div>
 																</ul>
@@ -534,8 +534,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">$</span> <span class="value">5,500</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text">Suitable for sites that does not receive much traffic.</li>
+																			<li><span class="currency">Desde $</span> <span class="value">4,499</span> <span class="duration">/MXN</span></li>
+																			<li class="price-text"></li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -553,7 +553,7 @@
 
 																		<div style="display: flex; justify-content: center; align-items: center; padding: 10px; height: 100%;">
 																			<a href="https://wa.me/529991752540?text=Hola,%20quiero%20información%20sobre%20el%20plan%20Diseño%20de%20Sitio%20Web." target="_blank" class="about-button">
-                                                                        Seleccionar
+                                                                        Cotizar
                                                                         </a></div>
 
 																	</div>
@@ -759,7 +759,7 @@
 										<nav class="footer-links">
 											<ul>
 												<li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
-												<li><a href="privacy-policy.html">Privacy Policy</a></li>
+												<!--<li><a href="privacy-policy.html">Privacy Policy</a></li>-->
 											</ul>
 										</nav>
 									</div>
