--- a/index.html
+++ b/index.html
@@ -694,22 +694,22 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <div class="container">
-            <div class="row justify-content-between items">
-                <div class="col-md-auto col-12 item">
-                    <nav class="footer-links">
-                        <ul>
-                            <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-md-auto col-12 item">
-                    <div class="copyright">© 2024 C.A.C.C. All rights reserved.</div>
-                </div>
-            </div>
-        </div>
-    </div>
+							<div class="container">
+								<div class="row justify-content-between items">
+									<div class="col-md-auto col-12 item">
+										<nav class="footer-links">
+											<ul>
+												<li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+												<!--<li><a href="privacy-policy.html">Privacy Policy</a></li>-->
+											</ul>
+										</nav>
+									</div>
+									<div class="col-md-auto col-12 item">
+										<div class="copyright">© 2024 C.A.C.C. All rights reserved.</div>
+									</div>
+								</div>
+							</div>
+						</div>
 </footer><!-- End footer -->
 
 	</main><!-- End main -->
