cambio de planes

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 						<div class="section-footer col-12 section-footer-animate">
 							<div class="btn-group align-items-center justify-content-center">
 								<a href="services.html" class="about-button">
-									<span>Ver precios</span>
+									<span>Ver Planes</span>
 									
 								</a>
 							</div>
