--- a/services.html
+++ b/services.html
@@ -250,7 +250,7 @@
 					<div class="moving-section" style="height: 50px; width: 100vw; overflow: hidden; background: #0C61D8;
                     background: linear-gradient(90deg, rgba(12, 97, 216, 1) 0%, rgba(2, 85, 173, 1) 50%, rgba(52, 121, 207, 1) 100%); padding: 10px 0;">
 						<div class="moving-text" style="display: inline-block; white-space: nowrap; color: #fff; font-size: 1.2rem; animation: moveText 20s linear infinite; padding-left: 100%;">
-							🚀 Diseño web | 🛒 E-commerce | 📧 Correo Profesional | 📱 E-mail Marketing | 📈 Marketing Online | 🛠️ Soporte Técnico |</p>
+							🚀 Diseño web | 🛒 E-commerce | 📧 Correo Profesional |“El precio depende de tu idea”, “Solo pagas por lo que necesitas”, o “Cotiza sin compromiso”. | 📱 E-mail Marketing | 📈 Marketing Online | 🛠️ Soporte Técnico | </p>
 						</div>
 					</div>
 
@@ -259,7 +259,7 @@
 							<div class="row">
 								<div class="col-12">
 									<div class="section-heading heading-center">
-										<h1>Planes y Precios</h1>
+										<h1>Planes</h1>
 									</div>
 									<div class="tabs">
 										<ul class="tabs-nav">
@@ -290,8 +290,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">Desde $</span> <span class="value">4,599</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text">Perfecto para páginas web simples o blogs.</li>
+																			<!--<li><span class="currency">Desde $</span> <span class="value">4,599</span> <span class="duration">/MXN</span></li>-->
+																			<li class="price-text">Ideal para blogs o páginas web simples. Obtén justo lo que necesitas.</li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -332,8 +332,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">Desde $</span> <span class="value">6,199</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text">Para más contenido y copias de seguridad diarias para páginas web en expansión.</li>
+																		<!--	<li><span class="currency">Desde $</span> <span class="value">6,199</span> <span class="duration">/MXN</span></li>-->
+																			<li class="price-text">Incluye más contenido y respaldos diarios. Perfecto para crecer en línea.</li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -372,8 +372,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">Desde $</span> <span class="value">7,699</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text">Máximo rendimiento y funciones avanzadas de creación de contenidos.</li>
+																		<!--	<li><span class="currency">Desde $</span> <span class="value">7,699</span> <span class="duration">/MXN</span></li>-->
+																			<li class="price-text">Máximo rendimiento para proyectos exigentes de contenido.</li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -432,8 +432,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">Desde $</span> <span class="value">9,299</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text">Desarrolla tu negocio de venta online con todas las extensiones que necesites.</li>
+																			<!--<li><span class="currency">Desde $</span> <span class="value">9,299</span> <span class="duration">/MXN</span></li>-->
+																			<li class="price-text">Crea tu catálogo o tienda virtual para vender sin límites.</li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -499,8 +499,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">Desde $</span> <span class="value">2,999</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text"></li>
+																				<!--<li><span class="currency">Desde $</span> <span class="value">2,999</span> <span class="duration">/MXN</span></li>-->
+																			<li class="price-text">Diseño tu landing para convertir visitantes en clientes.</li>
 																		</a>
 																	</div>
 																	<div class="price-list">
@@ -534,8 +534,8 @@
 																			<div class="iitem-icon-bg">
 																				<i class="material-icons material-icons-outlined">tv</i>
 																			</div>
-																			<li><span class="currency">Desde $</span> <span class="value">4,499</span> <span class="duration">/MXN</span></li>
-																			<li class="price-text"></li>
+																			<!--<li><span class="currency">Desde $</span> <span class="value">4,499</span> <span class="duration">/MXN</span></li>-->
+																			<li class="price-text">Diseño y desarrollo de páginas informativas, institucionales o de servicios </li>
 																		</a>
 																	</div>
 																	<div class="price-list">
